--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {font-size:16px;}
        
       <img src="img/dreamfightposter.jpg" style="width:100%" onclick="onClick(this)" alt="Ultimate Dream Fight Poster I created using Photoshop & Illustrator. I then placed the design on a poster mockup to really give this piece some depth.">
          <img src="img/Retouch Blas.jpg" style="width:100%" onclick="onClick(this)" alt=" This a photograph that I restored for my in-laws. This is the only remaining photograph that they have of my wife's grandpa. The original photograph had a lot of flaws. I used Adobe Photoshop to remove the flaws and enhance the colors to bring this image back to life.">
-        <img src="img/Beard Oil Label.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
+        <img src="img/beard oil bottle mockup portfolio.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
     </div>
 
     <div class="w3-half">
