--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {font-size:16px;}
     <a href="#review" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Reviews</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
         <a href="#socialmedia" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Social Media</a>
-         <a href="img/Felix Zavala Resume 2020.pdf" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Resume</a>
+         <a href="img/Felix Zavala Resume.pdf" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Resume</a>
     
   </div>
 </nav>
@@ -99,7 +99,7 @@ body {font-size:16px;}
     </p>
   </div>
      <br>  
-   <center><a href="img/Felix Zavala Resume 2020.pdf" download><i class="fa fa-download"></i>    <h3 class="w3-xlarge w3-text-light-blue"><b>Download Resume</b></h3></a></center>
+   <center><a href="img/Felix Zavala Resume.pdf" download><i class="fa fa-download"></i>    <h3 class="w3-xlarge w3-text-light-blue"><b>Download Resume</b></h3></a></center>
   <!-- Reviews -->
     <div class="w3-container" id="review" style="margin-top:75px">
    <h1 class="w3-xxxlarge w3-text-light-blue"><b>Reviews</b></h1>
