--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {font-size:16px;}
        
       <img src="img/dreamfightposter.jpg" style="width:100%" onclick="onClick(this)" alt="Ultimate Dream Fight Poster I created using Photoshop & Illustrator. I then placed the design on a poster mockup to really give this piece some depth.">
          <img src="img/Retouch Blas.jpg" style="width:100%" onclick="onClick(this)" alt=" This a photograph that I restored for my in-laws. This is the only remaining photograph that they have of my wife's grandpa. The original photograph had a lot of flaws. I used Adobe Photoshop to remove the flaws and enhance the colors to bring this image back to life.">
-        <img src="beard oil bottle mockup portfolio.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
+        <img src="img/beard oil bottle mockup portfolio.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
           <img src="img/SMW Z FOLD Open.jpg" style="width:100%" onclick="onClick(this)" alt="This is another advertisement I created for one of my classes. It is compiled of various media, the image of Bruce Lee is a picture I took of a small action figure. I then photoshopped the sky image into the background. All the text was done in Indesign except for the Bose logo on the top right corner. That was created in Illustrator.">
     </div>
 
