--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {font-size:16px;}
     <a href="#review" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Reviews</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
         <a href="#socialmedia" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Social Media</a>
-         <a href="assets/Felix Zavala Resume.pdf" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Resume</a>
+         <a href="img/Felix Zavala Resume.pdf" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Resume</a>
     
   </div>
 </nav>
