--- a/index.html
+++ b/index.html
@@ -96,15 +96,14 @@ body {font-size:16px;}
       <img src="img/subrotank.jpg" style="width:" onclick="onClick(this)" alt="The minimalistic design on this shirt was created by me using Adobe Illustrator. I then used software from the manufacturer to create this mockup.">
          <img src="img/retrobot%20sticker.jpg" style="width:100%" onclick="onClick(this)" alt=" The concept of the Robot was originally sketched out by me and then I re-created it using Adobe Illustrator. I then used software from the manufacturer to create this mockup.">
         <img src="img/beardoilbottlemockupportfolio.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
-          <img src="img/snapback.jpg" style="width:100%" onclick="onClick(this)" alt=" The design of this Snapback was created using Illustrator. I then used software from the manufacturer to create this mockup.">
      
     </div>
 
     <div class="w3-half">
          <img src="img/rankedtank.png" style="width:"  onclick="onClick(this)" alt="This design nicely represents all the belts in Brazilian Jiu-jitsu in minimalistic fashion. I created the concept and illustration. To complete the finished design I used the manufacturers software.">
-        <img src="img/lifestylelogomockup.jpg" style="width:100%" onclick="onClick(this)" alt="This is a logo I created from a sketch on a napkin from the customer. I re-created it using Adobe illustrator and placed it on this mock-up template to give the customer a visual representation.">
-        <img src="img/Wedding Invite.jpg" style="width:100%" onclick="onClick(this)" alt="This wedding invite was created using Adobe InDesign. It was an idea created by the customer and myself.">
-          <img src="img/Graphic%20Tee%20thumb%20faded.jpg" style="width:100%" onclick="onClick(this)" alt="This minimalistic design was created by me using Adobe Illustrator. I created the mock-up from a template and added my own filter to give the image a more retro look. ">
+                 <img src="img/snapback.jpg" style="width:100%" onclick="onClick(this)" alt=" The design of this Snapback was created using Illustrator. I then used software from the manufacturer to create this mockup.">
+
+      <img src="img/Wedding Invite.jpg" style="width:100%" onclick="onClick(this)" alt="This wedding invite was created using Adobe InDesign. It was an idea created by the customer and myself.">
 
 
       
@@ -129,7 +128,7 @@ body {font-size:16px;}
     </div>
 
     <div class="w3-half">
-        <img src="img/flower.JPG" style="width:100%" onclick="onClick(this)" alt="This is a photo I took of a flower. Besides manipulation the background I also brighthening the flower and made it a little more vibrant. ">
+        <img src="img/FLower.jpg" style="width:100%" onclick="onClick(this)" alt="This is a photo I took of a flower. Besides manipulation the background I also brighthening the flower and made it a little more vibrant. ">
         <img src="img/vintagepic.png" style="width:100%" onclick="onClick(this)" alt="I used a picture that I took and used a template to create this image. I then modified it photoshop to give the screen a more retro look.">
           <img src="img/be%20humble%20rose%20frost.gif" style="width:100%" onclick="onClick(this)" alt=" This originally was a stock image of the girl in the picture. I added my own flare to make it resemble the images of the Joker from the Dark Knight.">
 
