--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {font-size:16px;}
     <div class="w3-half">
          <img src="img/rankedtank.png" style="width:"  onclick="onClick(this)" alt="This design nicely represents all the belts in Brazilian Jiu-jitsu in minimalistic fashion. I created the concept and illustration. To complete the finished design I used the manufacturers software.">
  <img src="img/beardoilbottlemockupportfolio.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
-       <img src="img/Beard%Oil%Label.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
+       <img src="img/Beard Oil Label.jpg" style="width:100%" onclick="onClick(this)" alt="This is a label I created in Illustrator for a beard oil bottle.">
      
 
 
