--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {font-size:16px;}
 
     <div class="w3-half">
       
-               <img src="img/HHC%20Revised%202%20v2.png" style="width:100%"  onclick="onClick(this)" alt="This is a logo I created for a Rush Creek Church. They hired me to create a logo for a new outreach center. They gave me complete creative freedom and from conception to the final project.">
+               <img src="img/HHC.png" style="width:100%"  onclick="onClick(this)" alt="This is a logo I created for a Rush Creek Church. They hired me to create a logo for a new outreach center. They gave me complete creative freedom and from conception to the final project.">
 
          <img src="img/Mockup.jpg" style="width:100%"  onclick="onClick(this)" alt="This magazine editorial was created in Adobe Indesign. I modified Tyson Fury's image in Photoshop. Once everything was finished I used a PSD Mockup to complete the finished product.">
         <img src="img/battlecoffee.jpg" style="width:100%" onclick="onClick(this)" alt="This is an I designed for one of my classes. I created this ad in Photoshop. The original has a very dull background and it just looked plain. I decided to add some color to help bring the image to life.">
