--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ body {font-size:16px;}
    
                   <img src="img/Don%20Chuys%20Taco%20Shop.jpg" style="width:100%" onclick="onClick(this)" alt="I created this menu using indesign. The peppers and Don Chuy's font was created using Adobe Illustrator. The skull w/ sombrero is a stock photo.">
            <img src="img/Don%20Chuys%20Taco%20Shop2.jpg" style="width:100%" onclick="onClick(this)" alt="I created this menu using indesign. The peppers and Don Chuy's font was created using Adobe Illustrator. The skull w/ sombrero is a stock photo.">
-        
+                   <img src="img/Ad.jpg" style="width:100%" onclick="onClick(this)" alt="I created this ad using multiple programps, Photoshop, Illustrator and Indesign. The Bose logo was created using Adobe Illustrator. The images were combined using photoshop.">
+
     </div>
 
     <div class="w3-half">
