--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {font-size:16px;}
     
     
   <div class="w3-container" id="portfolio" style="margin-top:10px">
-    <h1 class="w3-xxxlarge w3-text-light-blue"><b>Portfolio</b></h1>
+    <h1 class="w3-xxxlarge w3-text-light-blue"><b>Here are a few logos that I have created...</b></h1>
     <hr style="width:50px;border:5px solid LightBlue" class="w3-round">
   </div>
 
