--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {font-size:16px;}
   <div class="w3-row-padding">
     <div class="w3-half">
       
-            <img src="img/lifestylelogo.jpg" style="width:100%" onclick="onClick(this)" alt="The text logo was created using Illustrator. It was created from a sketch on a napking that the customer provided to me.">
+            <img src="img/lifestylelogo.png" style="width:100%" onclick="onClick(this)" alt="The text logo was created using Illustrator. It was created from a sketch on a napking that the customer provided to me.">
 
        
       <img src="img/dreamfightposter.jpg" style="width:100%" onclick="onClick(this)" alt="Ultimate Dream Fight Poster I created using Photoshop & Illustrator. I then placed the design on a poster mockup to really give this piece some depth.">
