--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@ body {font-size:16px;}
     <h1 class="w3-jumbo"><b>Felix Zavala </b></h1>
     
       <div class="w3-container" id="services" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-light-blue"><b>A little about me...</b></h1>
+    <h1 class="w3-xxxlarge w3-text-light-blue"><b>I'm passionate about my work because its a reflection of ME. </b></h1>
     <hr style="width:50px;border:5px solid light blue" class="w3-round">
     
-        <p>  Based, out of the Dallas-Fort Worth metroplex I approach every project with passion and determination.
- I am well versed with Adobe design software on both PC and Mac platforms.
-  My goals are to help companies grow by creating visual and stunning graphics that can help promote the business through the use of literature and social media. I also have experience with product photography and I am a certified photographic retoucher. I have spent many years working in a corporate enviroment and I have several years of experience managing standard office software such Microsoft Outlook, Excel, Word, and creating Powerpoint presentations.
+        <p>  
 
     </p>
      <div class="w3-container" id="portfolio" style="margin-top:10px">
