--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {font-size:16px;}
 
     </p>
      <div class="w3-container" id="portfolio" style="margin-top:10px">
-    <h1 class="w3-xxxlarge w3-text-light-blue"><b>Check out these Illustrations</b></h1>
+    <h1 class="w3-xxxlarge w3-text-light-blue"><b></b></h1>
     <hr style="width:50px;border:5px solid LightBlue" class="w3-round">
   </div>
 
