--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ body {font-size:16px;}
   <div class="w3-container" style="margin-top:80px" id="showcase">
       <img src="">
    
-    <img src="img/fELIX-lOGO.gif" style="width:75%" onclick="onClick(this)" alt="Felix Zavala logo">
+     <h1 class="w3-xxxlarge w3-text-black"><b>FELIX ZAVALA </b></h1>
+    <hr style="width:50px;border:5px solid black" class="w3-round">
     
       <div class="w3-container" id="services" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-light-blue"><b>I'm passionate about my work because its a reflection of ME. </b></h1>
