--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">Felix Zavala</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
@@ -110,7 +110,7 @@
                 <h3>Build Indoo</h3>
                 <span>Photography</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" src="img/HHC.png">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -119,7 +119,7 @@
                 <h3>Cocooil</h3>
                 <span>Branding</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_3.jpg">
+              <img class="img-fluid" src="img/battlecoffee.jpg">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
