--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h3>Amazon</h3>
                 <span>brandingn</span>
               </div>
-              <img class="img-fluid" src="img/Beard Oil Label.jpg">
+              <img class="img-fluid" src="img/World-Fighter-Logo.gif">
             </a>
           </div>
         </div>
