--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Boxed Water</h3>
+                <h3>Illustration</h3>
                 <span>Web</span>
               </div>
               <img class="img-fluid" src="img/Office Guy Clip Art.jpg">
@@ -107,8 +107,8 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Build Indoo</h3>
-                <span>Photography</span>
+                <h3>Logo</h3>
+                <span></span>
               </div>
               <img class="img-fluid" src="img/HHC.png">
             </a>
