--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/Felix Favicon.png" rel="icon">
+  <link href="img/Felix Favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -125,10 +125,10 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Nike Shoe</h3>
+                <h3>Photography</h3>
                 <span>Design</span>
               </div>
-              <img class="img-fluid" src="img/Don Chuys Taco Shop.jpg">
+              <img class="img-fluid" src="img/beardoilbottlemockupportfolio.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -143,10 +143,10 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Amazon</h3>
-                <span>brandingn</span>
+                <h3>Print</h3>
+                <span></span>
               </div>
-              <img class="img-fluid" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/xmaUznooZaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
+              <img class="img-fluid" src="img/Mockup.jpg">
             </a>
           </div>
         </div>
