--- a/index.html
+++ b/index.html
@@ -152,40 +152,8 @@
         </div>
       </div>
     </section><!-- End  Works Section -->
-
-    <!-- ======= Clients Section ======= -->
-    <section class="section">
-      <div class="container">
-        <div class="row justify-content-center text-center mb-4">
-          <div class="col-5">
-            <h3 class="h3 heading">My Clients</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-adobe.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-uber.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-apple.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-netflix.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-nike.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="assets/img/logo-google.png" alt="Image" class="img-fluid"></a>
-          </div>
-
-        </div>
-      </div>
-    </section><!-- End Clients Section -->
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xmaUznooZaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
     <!-- ======= Services Section ======= -->
     <section class="section services">
       <div class="container">
@@ -259,12 +227,11 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
+                  <img src="img/61858265_312487986346554_8497596510282711040_n.jpg"" alt="Image" class="img-fluid">
                   <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
+                    <p>I recently used Mr. Zavala to help me design my logo. He does really good design work and gets the job done quick. I will definitely be using Mr. Zavala for all my graphic design needs.</p>
                   </blockquote>
-                  <p>&mdash; Jean Hicks</p>
+                  <p>&mdash; Philip Bennett</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
