--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <a href="#"><span class="bi bi-twitter"></span></a>
           <a href="#"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
-          <a href=""><span class="bi bi-youtube"></span></a>
+          <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
         </div>
       </div>
     </div>
