--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Photography</h3>
-                <span>Design</span>
+                <h3>Design</h3>
+                <span>Dream Fight Poster</span>
               </div>
-              <img class="img-fluid" src="img/beardoilbottlemockupportfolio.jpg">
+              <img class="img-fluid" src="img/dreamfightposter.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
