--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h3>Design</h3>
                 <span>Dream Fight Poster</span>
               </div>
-              <img class="img-fluid" src="img/Wedding Invite.jpg">
+              <img class="img-fluid" src="img/Cat Box.png">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
