--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="image1.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Logo</h3>
                 <span></span>
