--- a/image1.html
+++ b/image1.html
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
+            <h2>Not Enough Sleep Office Guy</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
           </div>
         </div>
@@ -105,9 +105,8 @@
                 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
+                  <li>Creation</li>
+                  
                 </ul>
 
                 <p><a href="#" class="readmore">Visit Website</a></p>
