--- a/image1.html
+++ b/image1.html
@@ -8,13 +8,13 @@
   <title>Felix Zavala</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+<font face="Courier">
 
   <!-- Favicons -->
   <link href="img/Felix Favicon.png" rel="icon">
   <link href="img/Felix Favicon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -195,7 +195,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+</font>
 </body>
 
 </html>
