--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link href="img/Felix Favicon.png" rel="icon">
   <link href="img/Felix Favicon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- Font -->
+<font face="Arial">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -231,6 +231,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+                                 </font>
 
 </body>
 
