--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="img/Felix Favicon.png" rel="apple-touch-icon">
 
   <!-- Font -->
-<font face="Arial">
+<font face="Courier">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -164,33 +164,9 @@
           </div>
         </div>
        
-    <!-- ======= Testimonials Section ======= -->
-    <section class="section pt-0">
-      <div class="container">
 
-        <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="img/61858265_312487986346554_8497596510282711040_n.jpg"" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>I recently used Mr. Zavala to help me design my logo. He does really good design work and gets the job done quick. I will definitely be using Mr. Zavala for all my graphic design needs.</p>
-                  </blockquote>
-                  <p>&mdash; Philip Bennett</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
 
-       
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
 
