--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image1.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Illustration</h3>
-                <span>Web</span>
+                <h3>Not Enough Sleep Office Guy</h3>
+                <span>Illustration</span>
               </div>
               <img class="img-fluid" src="img/Office Guy Clip Art.jpg">
             </a>
