--- a/image1.html
+++ b/image1.html
@@ -67,7 +67,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">FelixZavala.com</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
@@ -81,7 +81,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Not Enough Sleep Office Guy</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+            <p>Half asleep, caffeinated, and just a little bit late.</p>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
                 <p class="mb-4"><span class="text-muted">Design</span></p>
 
                 <div class="mb-5">
-                  <p>These are some Illustrations I created as part of an office package.</p>
+                  <p>This is an illustration I created as a parody of the average corporate worker.</p>
 
                 </div>
 
@@ -109,7 +109,7 @@
                   
                 </ul>
 
-                <p><a href="#" class="readmore">Visit Website</a></p>
+                <p><a href="#" class="readmore"></a></p>
               </div>
             </div>
           </div>
