--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
           <ul class="custom-menu">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -67,7 +65,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Felix Zavala</a>
+      <a class="navbar-brand" href="index.html">FelixZavala.com</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
@@ -107,8 +105,8 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image1.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Logo</h3>
-                <span></span>
+                <h3>Handley Hope Center</h3>
+                <span>Logo</span>
               </div>
               <img class="img-fluid" src="img/HHC.png">
             </a>
@@ -134,8 +132,8 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Kitchen Sink</h3>
-                <span>Photography</span>
+                <h3>Grandpa Blas</h3>
+                <span>Photo Restoration</span>
               </div>
               <img class="img-fluid" src="img/Retouch Blas.jpg">
             </a>
