--- a/index.html
+++ b/index.html
@@ -82,18 +82,11 @@
             <h2>El Portfolio</h2>
             <p class="mb-0">I'm an artist. Digital Media is my main form of expression</p>
           </div>
-          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web</a>
-              <a href="#" data-filter=".design">Design</a>
-              <a href="#" data-filter=".branding">Branding</a>
-              <a href="#" data-filter=".photography">Photography</a>
-            </div>
+          
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image1.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Not Enough Sleep Office Guy</h3>
