--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="image1.html" class="item-wrap fancybox">
+            <a href="image2.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Handley Hope Center</h3>
+                <h3>Handley Hope Center Logo</h3>
                 <span>Logo</span>
               </div>
               <img class="img-fluid" src="img/HHC.png">
