--- a/image2.html
+++ b/image2.html
@@ -89,6 +89,7 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <img src="img/HHC.png" alt="Image" class="img-fluid">
+               <img src="img/IMG_0972.PNG" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -96,7 +97,7 @@
                 <p class="mb-4"><span class="text-muted">Design & Illustration</span></p>
 
                 <div class="mb-5">
-                  <p>I created this logo for Rush Creek Church in Arlington, Texas. They needed a logo for newly formed outreach center and it was a joy to work with them. I used the input I received from the client to create a logo that represents hoped. I was deliberate in my design by using the color yellow. This was done to represent hope. </p>
+                  <p>I worked with Rush Creek Church to create this logo for a newly formed outreach center. As part of their movement for change and hope in East Fort Worth, I wanted the logo to express Hope. I was intentional in using the color yellow because it represents the color of hope and optimisim. </p>
 
                 </div>
 
@@ -131,8 +132,8 @@
         <div class="col-sm-6 social text-md-end">
           <a href="#"><span class="bi bi-twitter"></span></a>
           <a href="#"><span class="bi bi-facebook"></span></a>
-          <a href="#"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
+          <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
         </div>
       </div>
     </div>
