--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
             <h2>El Portfolio</h2>
             <p class="mb-0">I'm an artist. Digital Media is my main form of expression</p>
           </div>
-          
+          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
+            <div id="filters" class="filters">
+         
+            </div>
+          </div>
+        </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
