--- a/image2.html
+++ b/image2.html
@@ -89,8 +89,10 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <img src="img/HHC.png" alt="Image" class="img-fluid">
-              <br>
-              <br>
+             &nbsp;
+              &nbsp;
+              &nbsp;
+              &nbsp;
                <img src="img/IMG_0972.PNG" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
