--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <h3>Handley Hope Center Logo</h3>
                 <span>Logo</span>
               </div>
-              <img class="img-fluid" src="img/HHC.png">
+              <img class="img-fluid" src="img/IMG_0972.PNG">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
