--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
           <div class="tweet d-flex">
-            <span class="bi bi-twitter text-white mt-2 mr-3"></span>
+            <span class="bi bi-instagram text-white mt-2 mr-3"></span>
             <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
+              <p><em>"Under the sky, under the heavens there is but one family" -Bruce Lee <br> <a href="https://www.instagram.com/graphic_felix/">t.co/v82jsk</a></em></p>
             </div>
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiisexplicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+          <h3>Contact Me</h3>
+          <p>Please reach out to me for employment oppourtunites or just to say "Hi".<br> <a href="mailto: JFelixZavala@Yahoo.com">JFelixZavala@Yahoo.com</a></p>
         </div>
       </div>
 
