--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h3>Design</h3>
                 <span>Dream Fight Poster</span>
               </div>
-              <img class="img-fluid" src="img/Cat Box.png">
+              <img class="img-fluid" src="img/Subro stock pile cap 2.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
