--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Contact Me</h3>
-          <p>Please reach out to me for employment oppourtunites or just to say "Hi".<br> <a href="mailto: JFelixZavala@Yahoo.com">JFelixZavala@Yahoo.com</a></p>
+          <p>Please reach out to me for employment opportunities or just to say "Hi".<br> <a href="mailto: JFelixZavala@Yahoo.com">JFelixZavala@Yahoo.com</a></p>
         </div>
       </div>
 
