--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="bi bi-instagram text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>"Under the sky, under the heavens there is but one family" -Bruce Lee <br> <a href="https://www.instagram.com/graphic_felix/">t.co/v82jsk</a></em></p>
+        
+              <p><em>"Under the sky, under the heavens there is but one family" -Bruce Lee <br> </em></p>
             </div>
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Contact Me</h3>
-          <p>Please reach out to me for employment opportunities or just to say "Hi".<br> <a href="mailto: JFelixZavala@Yahoo.com">JFelixZavala@Yahoo.com</a></p>
+          <p>Please reach out to me for employment opportunities or just to say "Hi".<br> <a href="mailto: JFelixZavala@Yahoo.com"><b>JFelixZavala@Yahoo.com</b></a></p>
         </div>
       </div>
 
