--- a/index.html
+++ b/index.html
@@ -48,14 +48,11 @@
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
         
-              <p><em>"Under the sky, under the heavens there is but one family" -Bruce Lee <br> </em></p>
+              <p><em>Hola! <br> </em></p>
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Contact Me</h3>
-          <p>Please reach out to me for employment opportunities or just to say "Hi".<br> <a href="mailto: JFelixZavala@Yahoo.com">JFelixZavala@Yahoo.com</a></p>
-        </div>
+    
       </div>
 
     </div>
