--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
         
-              <p><em>Hola! <br> </em></p>
+              <p><em>   <li><a href="about.html">About Me</a></li> <br> </em></p>
             </div>
           </div>
         </div>
