--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h3>Design</h3>
                 <span>Dream Fight Poster</span>
               </div>
-              <img class="img-fluid" src="img/beardoilbottlemockupportfolio1.jpg">
+              <img class="img-fluid" src="img/beard oil bottle mockup portfolio1.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
