--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Branding</h3>
+                <h3>Tyson Fury Article</h3>
                 <span></span>
               </div>
               <img class="img-fluid" src="img/Mockup.jpg">
@@ -135,8 +135,8 @@
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Print</h3>
-                <span></span>
+                <h3>LoFi Video</h3>
+                <span>Video Animation</span>
               </div>
               <img class="img-fluid" src="img/maxresdefault.jpg">
             </a>
