--- a/index.html
+++ b/index.html
@@ -151,12 +151,27 @@
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
             <h3 class="h3 heading">Animations</h3>
-            <p>
-</p>
+<div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <div class="sticky-content">
+                <h3 class="h3">Associate of Arts, Graphic Communications</h3>
+                <p class="mb-4"><span class="text-muted">Tarrant County College | 2020</span></p>
+
+        <h3 class="h3">Associate of Arts, Graphic Communications</h3>
+                <p class="mb-4"><span class="text-muted">Tarrant County College | 2020</span></p>
+                
+                </div>
           </div>
         </div>
        
+<div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <div class="sticky-content">
+                <h3 class="h3">Associate of Arts, Graphic Communications</h3>
+                <p class="mb-4"><span class="text-muted">Tarrant County College | 2020</span></p>
 
+        <h3 class="h3">Associate of Arts, Graphic Communications</h3>
+                <p class="mb-4"><span class="text-muted">Tarrant County College | 2020</span></p>
+                </div>
+          </div>
 
 
 
