--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
           </div>
         </div>
        
-<div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <div class="sticky-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
                 <h3 class="h3">Associate of Arts, Graphic Communications</h3>
                 <p class="mb-4"><span class="text-muted">Tarrant County College | 2020</span></p>
 
