--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="image3.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Tyson Fury Article</h3>
                 <span></span>
