--- a/image3.html
+++ b/image3.html
@@ -93,7 +93,7 @@
               &nbsp;
               &nbsp;
               &nbsp;
-               <img src="img/IMG_0972.PNG" alt="Image" class="img-fluid">
+               <img src="img/Magazine_Mockup_3.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
