--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
           <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image1.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Not Enough Sleep Office Guy</h3>
-                <span>Illustration</span>
+                <h3>Tyson Fury Article</h3>
+                <span>Magazine Spread</span>
               </div>
-              <img class="img-fluid" src="img/Office Guy Clip Art.jpg">
+              <img class="img-fluid" src="img/Mockup.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="image2.html" class="item-wrap fancybox">
+            <a href="image3.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Handley Hope Center Logo</h3>
                 <span>Logo</span>
@@ -106,12 +106,12 @@
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="image3.html" class="item-wrap fancybox">
+            <a href="image2.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Tyson Fury Article</h3>
-                <span></span>
+                <h3>Not Enough Sleep Office Guy</h3>
+                <span>Illustration</span>
               </div>
-              <img class="img-fluid" src="img/Mockup.jpg">
+              <img class="img-fluid" src="img/Office Guy Clip Art.jpg">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
