--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavala Script.png"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavala Script.png" width="25%"></a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
