--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Grandpa Blas</h3>
-                <span>Photo Restoration</span>
+                <h3>Subro Tee</h3>
+                <span>Product Design</span>
               </div>
-              <img class="img-fluid" src="img/Retouch Blas.jpg">
+              <img class="img-fluid" src="img/Graphic Tee thumb faded.jpg">
             </a>
           </div>
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
