--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavala Script.png" width="25%"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalacom Script.png" width="25%"></a>
  
         <span></span>
       </a>
