--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="25%"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="50%"></a>
  
         <span></span>
       </a>
@@ -59,11 +59,10 @@
           </div>
          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web</a>
-              <a href="#" data-filter=".design">Design</a>
-              <a href="#" data-filter=".branding">Branding</a>
-              <a href="#" data-filter=".photography">Photography</a>
+              <a href="#" data-filter="*" class="active">Home</a>
+              <a href="#" data-filter=".web">About Me</a>
+              <a href="#" data-filter=".design">Contact</a>
+            
             </div>
           </div>
         </div>
