--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="50%"></a>
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a>
  
         <span></span>
       </a>
@@ -59,9 +59,9 @@
           </div>
          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">Home</a>
-              <a href="#" data-filter=".web">About Me</a>
-              <a href="#" data-filter=".design">Contact</a>
+              <a href="https://felixzavala.com/index.html">Home</a>
+              <a href="https://felixzavala.com/about.html">About Me</a>
+              <a href="https://felixzavala.com/contact.html">Contact</a>
             
             </div>
           </div>
