--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Design</h3>
-                <span>Dream Fight Poster</span>
+                <h3>Beard Oil Label</h3>
+                <span>Design & Mock-up</span>
               </div>
               <img class="img-fluid" src="img/beard oil bottle mockup portfolio1.jpg">
             </a>
@@ -107,7 +107,7 @@
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Subro Tee</h3>
-                <span>Product Design</span>
+                <span>Design & Mock-up</span>
               </div>
               <img class="img-fluid" src="img/Graphic Tee thumb faded.jpg">
             </a>
@@ -116,7 +116,7 @@
             <a href="image4.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>LoFi Video</h3>
-                <span>Video Animation</span>
+                <span>Animation</span>
               </div>
               <img class="img-fluid" src="img/maxresdefault.jpg">
             </a>
