--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           </div>
          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="https://felixzavala.com/index.html">Home</a>
-              <a href="https://felixzavala.com/about.html">About Me</a>
-              <a href="https://felixzavala.com/contact.html">Contact</a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About Me</a>
+              <a href="contact.html">Contact</a>
             
             </div>
           </div>
