--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p class="mb-0"></p>
           </div>
          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
-         
+            <div id="" class="filters">
               <a href="index.html">Home</a>
               <a href="about.html">About Me</a>
               <a href="contact.html">Contact</a>
