--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2></h2>
+            <h2>El Portfolio</h2>
             <p class="mb-0"></p>
           </div>
          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="" class="filters">
-              <a href="index.html">Home</a>
               <a href="about.html">About Me</a>
               <a href="contact.html">Contact</a>
             
