--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2></h2>
+            <h2>El Portfolio</h2>
             <p class="mb-0"></p>
           </div>
          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
@@ -72,7 +72,7 @@
                 <h3>Tyson Fury Article</h3>
                 <span>Magazine Spread</span>
               </div>
-              <img class="img-fluid" src="img/Mockup.jpg">
+              <img class="img-fluid" src="img/Mockup1.jpg">
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
