--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="28%"></a> <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
-            <div id="" class="filters">
-              <a href="about.html">About Me</a>
-              <a href="contact.html">Contact</a>
-            
-            </div>
-          </div>
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="28%"></a> 
  
         <span></span>
       </a>
@@ -132,6 +126,13 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
+  <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
+            <div id="" class="filters">
+              <a href="about.html">About Me</a>
+              <a href="contact.html">Contact</a>
+            
+            </div>
+          </div>
   <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
