--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
           </div>
         </div>
+        <p> Welcome, to my page. Stick around a bit and check out the scenery.</P>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image3.html" class="item-wrap fancybox">
