--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hello World...</h2>
+            <h2>Welcome</h2>
             <p class="mb-0"></p>
           </div>
           
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <p> Welcome, to my page. Stick around a bit and check out the scenery.</P>
+        <p> </P>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image3.html" class="item-wrap fancybox">
