--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
         </div>
       </div>
     </section><!-- End  Works Section -->
-   
+       <h2>About the Artist</h2>
+  <p> lorem ipsum, ipsum lorem whatugha </p>
     <!-- ======= Services Section ======= -->
 
 
