--- a/about.html
+++ b/about.html
@@ -62,8 +62,9 @@
 
   <main id="main">
  <section class="section pb-5">
-      <div class="container">
-        <div class="row mb-5 align-items-end">
+
+     <div class="w3-container">
+
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
@@ -72,7 +73,7 @@
           </div>
 
         </div>
-
+</div>
        
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
