--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
   <main id="main">
  <section class="section pb-5">
 
-     <div class="w3-panel w3-padding-large">
+     <div class="w3-container w3-center">
 
           <div class="col-md-6" data-aos="fade-up">
 
