--- a/about.html
+++ b/about.html
@@ -69,8 +69,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.</p>
+            <p class="mb-0">As far back as I can remember I have always been into creating art. I may not have always been skilled at creating art but I have always had a passion for it.</p>
           </div>
 
         </div>
