--- a/about.html
+++ b/about.html
@@ -64,9 +64,9 @@
      <section class="section site-portfolio">
 
 
-     <div class="w3-container w3-center">
+     <div class="w3-container w3-center" data-aos="fade-up">
 
-          <div class="col-md-6" data-aos="fade-up">
+      
 
             <h2>About Me</h2>
             <p class="mb-0">As far back as I can remember I have always been into creating art. I may not have always been skilled at creating art but I have always had a passion for it.</p>
