--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
      <section class="section site-portfolio">
 
 
-     <div class="w3-container w3-center" data-aos="fade-up">
+   
 
       
 
@@ -75,11 +75,10 @@
         </div>
 </div>
        
+  <div class="w3-container w3-center" data-aos="fade-up">
 
-          <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="img/vintagepic.png" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
-              molestias illo dolorem et, odio!</p>
+            <p>For the past 6 years digital art has been my main focus. To enhance my skills I started attending Tarrant County college and I graduated with my Associate degree from Tarrant County College!</p>
             <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
               rem consequuntur, illum adipisci, sed obcaecati!</p>
             <p>Ex, dolorem qui voluptas reprehenderit provident, ad ipsum iure a consequatur voluptatem incidunt nobis.
