--- a/about.html
+++ b/about.html
@@ -79,9 +79,9 @@
   <div class="w3-container w3-center" data-aos="fade-up">
 
             <p><img src="img/vintagepic.png" alt="Image" class="img-fluid"></p>
-            <p>For the past 6 years digital art has been my main focus. To enhance my skills I started attending Tarrant County college and I graduated with my Associates degree and several certifications! Now, I am currently enrolled in the University of Texas at Arlington and  my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
+            <p>For the past 6 years digital art has been my main focus. To enhance my skills I went back to school and earned my Associates degree and several certifications. Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
             <p></p>
-            <p> I have experience</p>
+            <p> I have experience in logo design and photographic retouching. </p>
             <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
               nisi voluptatibus. Minus?</p>
             <p><a href="#" class="readmore">Download my CV</a></p>
