--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
             <h2>About Me</h2>
     <br>
-            <p class="mb-0">As far back as I can remember I have always been into creating art. I may not have always been skilled at creating art but I have always had a passion for it.</p>
+            <p><q>As far back as I can remember I have always been into creating art. I may not have always been skilled at creating art but I have always had a passion for it.</q></p>
           </div>
 
         </div>
