--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <p><img src="img/vintagepic.png" alt="Image" class="img-fluid"></p>
             <p>For the past 6 years digital art has been my main focus. To enhance my skills I went back to school and earned my Associates degree and several certifications. Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
             <p></p>
-            <p> I have experience in logo design and photographic retouching. </p>
+            <p> I have experience as a Freelance designer but I would like to work alongside and learn from other experienced artists who currently work in a company setting. I  </p>
             <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
               nisi voluptatibus. Minus?</p>
             <p><a href="#" class="readmore">Download my CV</a></p>
