--- a/about.html
+++ b/about.html
@@ -70,8 +70,7 @@
 
             <h2>About Me</h2>
     <br>
-            <p style="font-size:18px"><q><b>As far back as I can remember I have always been into creating art. <br>I may not have always had the skills but I have always had a passion for it.</q></p>
-    </b></div>
+            </div>
 
         </div>
 </div>
@@ -79,6 +78,8 @@
   <div class="w3-container w3-center" data-aos="fade-up">
 
             <p><img src="img/vintagepic.png" alt="Image" class="img-fluid"></p>
+    <p style="font-size:18px"><q><b>As far back as I can remember I have always been into creating art. <br>I may not have always had the skills but I have always had a passion for it.</q></p>
+    </b>
             <p>To enhance my skills I went back to school and earned my associates degree in Graphic Communications, as well as several certifications. <br> Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
          
             <p> I have experience as a Freelance designer but I would like to work alongside and learn from other experienced artists who currently work</p>
